--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "node": "18.x"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
@@ -23,7 +28,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^6.1.6"
   },
   "scripts": {
     "start": "node server/server.js",
